# Hands_On_CMake

./: .gitignore  CMakeLists.txt  OLASConfig.h.in  README.md  add_op.c  add_op.h  main.c
multi_lib/: CMakeLists.txt  multiple_op.c  multiple_op.h
